--- a/SchulCloud.Frontend/Components/Pages/Auth/ConfirmEmail.razor
+++ b/SchulCloud.Frontend/Components/Pages/Auth/ConfirmEmail.razor
@@ -1,6 +1,6 @@
 ﻿<AppPageTitle Title="@Localizer["title"]" />
 
-<MudPaper Class="mt-15 px-3 py-3">
+<MudPaper Class="px-3 py-3">
     <MudText>@Localizer["confirmText"]</MudText>
     <MudButton Class="mt-3" Color="Color.Primary" EndIcon="@MaterialSymbols.Outlined.Send"
                OnClick="SendConfirmEmail_ClickAsync" Variant="Variant.Filled">
