--- a/SchulCloud.Frontend/Components/Pages/Auth/Login.razor
+++ b/SchulCloud.Frontend/Components/Pages/Auth/Login.razor
@@ -2,7 +2,7 @@
 
 <AppPageTitle Title="@Localizer["title"]" />
 
-<MudPaper Class="mt-15 px-3 py-3">
+<MudPaper Class="px-3 py-3">
     <MudText Class="mb-5" Typo="Typo.h4" Align="Align.Center">@Localizer["header"]</MudText>
 
     <form @ref="_formRef" @formname="@_formName" method="post">
