--- a/SchulCloud.Frontend/Components/Pages/Auth/Verify2fa.razor
+++ b/SchulCloud.Frontend/Components/Pages/Auth/Verify2fa.razor
@@ -2,7 +2,7 @@
 
 <AppPageTitle Title="@Localizer["title"]" />
 
-<MudPaper Class="mt-15 px-3 py-3">
+<MudPaper Class="px-3 py-3">
     <MudText Typo="Typo.h4" Align="Align.Center">@Localizer["title"]</MudText>
 
     <MudText Class="my-2" Typo="Typo.body1" Align="Align.Center">@Localizer["desc"]</MudText>
