--- a/SchulCloud.Frontend/Components/Pages/Auth/ResetPassword.razor
+++ b/SchulCloud.Frontend/Components/Pages/Auth/ResetPassword.razor
@@ -1,6 +1,6 @@
 ﻿<AppPageTitle Title="@Localizer["title"]"/>
 
-<MudPaper Class="mt-15 px-3 py-3">
+<MudPaper Class="px-3 py-3">
     @if (_user is null)
     {
         <MudText>@Localizer["userForm_Text"]</MudText>
