Added a simple view for api keys. -Feature: Addded a table view for api keys. -Style: Maked the security pages more consistent. -Fix: Fixed api key config and migration to allow null value to Expires.

--- a/SchulCloud.Frontend/Components/Layouts/PageLayouts/AccountSecurityLayout.razor
+++ b/SchulCloud.Frontend/Components/Layouts/PageLayouts/AccountSecurityLayout.razor
@@ -25,6 +25,13 @@
                     <MudText Align="Align.Center">@Localizer["tabLogInAttempts"]</MudText>
                 </MudNavLink>
             }
+
+            @if (UserManager.SupportsUserApiKeys && UserManager.ApiKeyOptions.MaxKeysPerUser != 0)
+            {
+                <MudNavLink Href="@Routes.ApiKeys()" ActiveClass="border-solid border-b-2 mud-border-primary mud-primary-text">
+                    <MudText Align="Align.Center">@Localizer["tabApiKeys"]</MudText>
+                </MudNavLink>
+            }
         </MudStack>
     </div>
 </MudPaper>
