Added a page to create new api keys. -Feature: Added a page to create a new api key. -Improvement: Added validation of permissions an key count on creating a new api key. -Fix: Fixed a mistake were the id of the owning user isn't set to an api key. -Config: Decreased the lenght of generated api keys to make them fit better into the gui.

--- a/SchulCloud.Frontend/Components/Pages/Account/Security/ApiKeyDetails.razor
+++ b/SchulCloud.Frontend/Components/Pages/Account/Security/ApiKeyDetails.razor
@@ -54,7 +54,7 @@
 
                             <div class="mt-3 mb-4">
                                 <MudText Typo="Typo.subtitle2">@permissionName</MudText>
-                                <MudSlider Value="@((int)keyLevel)" Min="0" Step="1" Max="(int)userLevel" TickMarkLabels="@labels" TickMarks />
+                                <MudSlider Value="@((int)keyLevel)" Min="0" Step="1" Max="(int)userLevel" TickMarkLabels="@labels" TickMarks Disabled />
                             </div>
 
                             @if (_userPermissions.OrderBy(p => p.Key).Last().Key != permissionName)
