--- a/SchulCloud.Frontend/Components/Pages/Account/Security/ApiKeyCreate.razor
+++ b/SchulCloud.Frontend/Components/Pages/Account/Security/ApiKeyCreate.razor
@@ -7,7 +7,7 @@
 
     <MudForm @ref="_createForm" @bind-IsValid="_formIsValid">
         <MudTextField @bind-Value="_createKeyModel.Name" Label="@Localizer["form_Name"]"
-                      Validation="@(async (string value) => await Name_ValidateAsync(value))" RequiredError="@Localizer["form_Required"]" Required />
+        Validation="@(async (string value) => await Name_ValidateAsync(value))" RequiredError="@Localizer["form_Required"]" Required />
         <MudTextField @bind-Value="_createKeyModel.Notes" Label="@Localizer["form_Notes"]" />
         <MudStack Class="mt-2" Row>
             <MudDatePicker @bind-Date="_createKeyModel.Expires" Label="@Localizer["form_Expires"]" Placeholder="@Localizer["form_Expires_Infinite"]"
@@ -30,31 +30,17 @@
             @{
                 string[] labels = ["None", "Read", "Read/Write", "Read/Write/Special"];
             }
-            @foreach ((string permissionName, PermissionLevel userLevel) in _userPermissions.OrderBy(p => p.Key))
+            @foreach (Permission userPermission in _userPermissions.OrderBy(p => p.Name))
             {
-                PermissionLevel permissionLevel;
-                EventCallback<int> permissionChanged;
-                if (!_createKeyModel.AllPermissions)
-                {
-                    if (!_createKeyModel.PermissionLevels.TryGetValue(permissionName, out permissionLevel))
-                    {
-                        permissionLevel = PermissionLevel.None;
-                    }
-                    permissionChanged = CreatePermissionChangedCallback(permissionName);
-                }
-                else
-                {
-                    permissionLevel = userLevel;
-                    permissionChanged = EventCallback<int>.Empty;
-                }
+                (PermissionLevel permissionLevel, EventCallback<int> permissionChanged) = GetPermissionLevel(userPermission);
 
                 <div class="mt-3 mb-4">
-                    <MudText Typo="Typo.subtitle2">@permissionName</MudText>
+                    <MudText Typo="Typo.subtitle2">@userPermission.Name</MudText>
                     <MudSlider Value="@((int)permissionLevel)" ValueChanged="permissionChanged" Disabled="_createKeyModel.AllPermissions"
-                               Min="0" Step="1" Max="(int)userLevel" TickMarkLabels="@labels" TickMarks />
+                               Min="0" Step="1" Max="@((int)userPermission.Level)" TickMarkLabels="@labels" TickMarks />
                 </div>
 
-                @if (_userPermissions.OrderBy(p => p.Key).Last().Key != permissionName)
+                @if (_userPermissions.OrderBy(p => p.Name).Last() == userPermission)
                 {
                     <MudDivider />
                 }
