Some improvements -Improvement: Removed _static prefix from static resources. -Refactor: Moved WebAuthnService and LoginLogBackgroundService into their own namespaces and renamed them. -Refactor: Moved some

--- a/SchulCloud.Frontend/Components/App.razor
+++ b/SchulCloud.Frontend/Components/App.razor
@@ -13,9 +13,9 @@
     <FaviconLinks />
 
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
-    <link href="/_static/_content/MudBlazor/MudBlazor.min.css" rel="stylesheet" />
-    <link href="/_static/_content/MudBlazor.FontIcons.MaterialSymbols/css/font.min.css" rel="stylesheet" />
-    <link href="/_static/dist/css/AppBundle.styles.css" rel="stylesheet" />
+    <link href="/_content/MudBlazor/MudBlazor.min.css" rel="stylesheet" />
+    <link href="/_content/MudBlazor.FontIcons.MaterialSymbols/css/font.min.css" rel="stylesheet" />
+    <link href="/dist/css/AppBundle.styles.css" rel="stylesheet" />
 </head>
 
 <body>
@@ -28,9 +28,9 @@
     <CookieConsent />
 
     <script src="/_framework/blazor.web.js" data-cookie-consent="strictly-necessary"></script>
-    <script src="/_static/_content/MudBlazor/MudBlazor.min.js" data-cookie-consent="strictly-necessary"></script>
-    <script src="/_static/_content/BlazorGoogleMaps/js/objectManager.js" data-cookie-consent="strictly-necessary"></script>
-    <script src="/_static/dist/js/Main.min.js" data-cookie-consent="strictly-necessary"></script>
+    <script src="/_content/MudBlazor/MudBlazor.min.js" data-cookie-consent="strictly-necessary"></script>
+    <script src="/_content/BlazorGoogleMaps/js/objectManager.js" data-cookie-consent="strictly-necessary"></script>
+    <script src="/dist/js/Main.min.js" data-cookie-consent="strictly-necessary"></script>
 </body>
 
 </html>
