--- a/SchulCloud.Frontend/Components/CookieConsent.razor
+++ b/SchulCloud.Frontend/Components/CookieConsent.razor
@@ -1,5 +1,5 @@
 ﻿<!-- Cookie Consent by FreePrivacyPolicy.com https://www.FreePrivacyPolicy.com -->
-<script type="text/javascript" src="//www.freeprivacypolicy.com/public/cookie-consent/4.2.0/cookie-consent.js" charset="UTF-8"></script>
+<script type="text/javascript" src="https://www.freeprivacypolicy.com/public/cookie-consent/4.2.0/cookie-consent.js" charset="UTF-8"></script>
 <script type="text/javascript" charset="UTF-8">
     document.addEventListener('DOMContentLoaded', function () {
         cookieconsent.run(
