Added link to the API docs to the view and some other changes -Feature: Added links to the API docs to the API keys page. -Feature: Maked the mappging of swagger enablable. -Improvement: Moved BasePath config into service defaults. -Fix: Fixed Fido2 Auth by adding the gateway ports to the origins.

--- a/SchulCloud.Frontend/Components/Pages/Account/Security/ApiKeys.razor
+++ b/SchulCloud.Frontend/Components/Pages/Account/Security/ApiKeys.razor
@@ -7,6 +7,24 @@
     <MudText Typo="Typo.h6">@Localizer["title"]</MudText>
     <MudText Class="my-2" Typo="Typo.body1">@Localizer["desc"]</MudText>
 
+    @if (ApiOptionsSnapshoot.Value.DocumentationLinks.Any())
+    {
+        <MudStack Row>
+            <MudText>@Localizer["availableApis"]:</MudText>
+            @foreach ((string name, Uri? url) in ApiOptionsSnapshoot.Value.DocumentationLinks)
+            {
+                if (url is not null)
+                {
+                    <MudLink Href="@url.ToString()" Target="_blank">@name</MudLink>
+                }
+                else
+                {
+                    <MudText>@name</MudText>
+                }
+            }
+        </MudStack>
+    }
+
     @{
         int maxKeysCount = UserManager.ApiKeyOptions.MaxKeysPerUser;
         bool newKeysAllowed = maxKeysCount != -1
