--- a/SchulCloud.Frontend/Components/App.razor
+++ b/SchulCloud.Frontend/Components/App.razor
@@ -7,7 +7,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <base href="/" />
+    <base href="@OptionsAccessor.Value.BasePath" />
 
     <HeadOutlet @rendermode="InteractiveServer" />
     <FaviconLinks />
