--- a/SchulCloud.Frontend/Components/Pages/Account/Security/ApiKeys.razor
+++ b/SchulCloud.Frontend/Components/Pages/Account/Security/ApiKeys.razor
@@ -26,7 +26,7 @@
     }
 
     @{
-        int maxKeysCount = UserManager.ApiKeyOptions.MaxKeysPerUser;
+        int maxKeysCount = ApiKeyOptions.Value.MaxKeysPerUser;
         bool newKeysAllowed = maxKeysCount != -1
             ? maxKeysCount > _apiKeys.Count()
             : true;
