Added clipboard API and improved JSRuntime use -Feature: Added clipboard api and first use to copy the API key. -Improvement: Lazy loaded objectManager.js only if its required.

--- a/SchulCloud.Frontend/Components/App.razor
+++ b/SchulCloud.Frontend/Components/App.razor
@@ -29,8 +29,7 @@
 
     <script src="/_framework/blazor.web.js" data-cookie-consent="strictly-necessary"></script>
     <script src="/_content/MudBlazor/MudBlazor.min.js" data-cookie-consent="strictly-necessary"></script>
-    <script src="/_content/BlazorGoogleMaps/js/objectManager.js" data-cookie-consent="strictly-necessary"></script>
-    <script src="/dist/js/Main.min.js" data-cookie-consent="strictly-necessary"></script>
+    <script src="/dist/js/AppBundle.min.js" data-cookie-consent="strictly-necessary"></script>
 </body>
 
 </html>
