Some minor improvements -Improvement: Adapted the static assets path to the _content pattern of blazor. -Improvement: Disabled source map generation for ts code if the environment isn't development. -Improvement: Switched place of api key tab and login attempts tab. -Chore: Updated some NuGet packages and adapted the fido2 interaction. -Fix: Synchronised the namespace of AppUserManager.

--- a/SchulCloud.Frontend/Components/App.razor
+++ b/SchulCloud.Frontend/Components/App.razor
@@ -13,9 +13,9 @@
     <FaviconLinks />
 
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
-    <link href="/_content/MudBlazor/MudBlazor.min.css" rel="stylesheet" />
-    <link href="/_content/MudBlazor.FontIcons.MaterialSymbols/css/font.min.css" rel="stylesheet" />
-    <link href="/dist/css/AppBundle.styles.css" rel="stylesheet" />
+    <link href="@Assets["/_content/MudBlazor/MudBlazor.min.css"]" rel="stylesheet" />
+    <link href="@Assets["/_content/MudBlazor.FontIcons.MaterialSymbols/css/font.min.css"]" rel="stylesheet" />
+    <link href="@Assets["/_content/SchulCloud.Frontend/SchulCloud.Frontend.styles.css"]" rel="stylesheet" />
 </head>
 
 <body>
@@ -28,8 +28,8 @@
     <CookieConsent />
 
     <script src="/_framework/blazor.web.js" data-cookie-consent="strictly-necessary"></script>
-    <script src="/_content/MudBlazor/MudBlazor.min.js" data-cookie-consent="strictly-necessary"></script>
-    <script src="/dist/js/AppBundle.min.js" data-cookie-consent="strictly-necessary"></script>
+    <script src="@Assets["/_content/MudBlazor/MudBlazor.min.js"]" data-cookie-consent="strictly-necessary"></script>
+    <script src="@Assets["/_content/SchulCloud.Frontend/SchulCloud.Frontend.min.js"]" data-cookie-consent="strictly-necessary"></script>
 </body>
 
 </html>
