--- a/SchulCloud.Frontend/Components/Pages/Account/Settings.razor
+++ b/SchulCloud.Frontend/Components/Pages/Account/Settings.razor
@@ -5,38 +5,59 @@
 <MudText Class="mb-2" Typo="Typo.h4" Align="Align.Center">@Localizer["title"]</MudText>
 
 <MudPaper Class="px-3 py-3">
-    <MudGrid>
+    <MudGrid Spacing="2">
         <MudItem xs="12">
             <MudText Typo="Typo.h5">@Localizer["language"]</MudText>
         </MudItem>
 
         <MudItem xs="6" sm="3" lg="2">
-            <MudStack Class="mt-4" Justify="Justify.Center" Row>
+            <MudStack Class="mt-3" Justify="Justify.Center" Row>
+                <MudText Class="mr-n1">@Localizer["languageAuto"]</MudText>
+                <MudTooltip Text="@Localizer["languageAuto_Tooltip"]"><MudIcon Icon="@MaterialSymbols.Outlined.Help" /></MudTooltip>
+            </MudStack>
+        </MudItem>
+        <MudItem xs="6" md="5" lg="4">
+            <MudCheckBox T="bool" Value="_fromBrowserCulture" ValueChanged="OnBrowserCultureChangedAsync" />
+        </MudItem>
+        <div class="end-spacer mud-grid-item mud-grid-item-sm-3 mud-grid-item-md-4 mud-grid-item-lg-6" />     @* Replaces <MudItem xs="0" sm="3" md="4" lg="6" /> because on a component CSS isolation isn't working as it should *@
+
+        <MudItem xs="6" sm="3" lg="2">
+            <MudStack Class="mt-3" Justify="Justify.Center" Row>
                 <MudText Class="mr-n1">@Localizer["language"]</MudText>
                 <MudTooltip Text="@Localizer["language_Tooltip"]"><MudIcon Icon="@MaterialSymbols.Outlined.Help" /></MudTooltip>
             </MudStack>
         </MudItem>
         <MudItem xs="6" md="5" lg="4">
-            <MudSelect Value="@_culture" ValueChanged="@(async (CultureInfo? culture) => await OnCultureChangedAsync(culture))" Variant="Variant.Outlined">
+            <MudSelect Value="@_culture" ValueChanged="@(async (CultureInfo? culture) => await OnCultureChangedAsync(culture))" Disabled="_fromBrowserCulture" Variant="Variant.Outlined">
                 @foreach (CultureInfo culture in LocalizationOptions.SupportedCultures ?? [])
                 {
-                    <MudSelectItem Value="culture">@culture.NativeName</MudSelectItem>
+                    <MudSelectItem Value="culture">
+                        <MudStack AlignItems="AlignItems.Center" Row>
+                            <MudImage Height="30" Src="@Assets[$"_content/SchulCloud.Frontend/{culture.Name.Replace('-', '_')}.svg"]" Alt="@culture.Name" />
+                            @culture.NativeName
+                        </MudStack>
+                    </MudSelectItem>
                 }
             </MudSelect>
         </MudItem>
         <div class="end-spacer mud-grid-item mud-grid-item-sm-3 mud-grid-item-md-4 mud-grid-item-lg-6" />     @* Replaces <MudItem xs="0" sm="3" md="4" lg="6" /> because on a component CSS isolation isn't working as it should *@
 
         <MudItem xs="6" sm="3" lg="2">
-            <MudStack Class="mt-4" Justify="Justify.Center" Row>
+            <MudStack Class="mt-3" Justify="Justify.Center" Row>
                 <MudText Class="mr-n1">@Localizer["languageDisplay"]</MudText>
                 <MudTooltip Text="@Localizer["languageDisplay_Tooltip"]"><MudIcon Icon="@MaterialSymbols.Outlined.Help" /></MudTooltip>
             </MudStack>
         </MudItem>
         <MudItem xs="6" md="5" lg="4">
-            <MudSelect Value="@_uiCulture" ValueChanged="@(async (CultureInfo? culture) => await OnUiCultureChangedAsync(culture))" Variant="Variant.Outlined">
-                @foreach (CultureInfo culture in LocalizationOptions.SupportedCultures ?? [])
+            <MudSelect Value="@_uiCulture" ValueChanged="@(async (CultureInfo? culture) => await OnUiCultureChangedAsync(culture))" Disabled="_fromBrowserCulture" Variant="Variant.Outlined">
+                @foreach (CultureInfo culture in LocalizationOptions.SupportedUICultures ?? [])
                 {
-                    <MudSelectItem Value="culture">@culture.NativeName</MudSelectItem>
+                    <MudSelectItem Value="culture">
+                        <MudStack AlignItems="AlignItems.Center" Row>
+                            <MudImage Height="30" Src="@Assets[$"/_content/SchulCloud.Frontend/{culture.Name.Replace('-', '_')}.svg"]" Alt="@culture.Name" />
+                            @culture.NativeName
+                        </MudStack>
+                    </MudSelectItem>
                 }
             </MudSelect>
         </MudItem>
